@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-04-28
+	Fixed: Path visibility option was ignored. It should now properly be generated, cached, and displayed.
 ### 2020-04-26
 	Changed: Volume changes now show the matching rule and process name as normal.
 	Changed: Volume changer to use cached information before trying to harvest it (again).
